# matrix-burn-bot-rs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: main.rs
